src/objects/pse_IdeasComments__c.object
<CustomObject>
    <fields>
        <fullName>pse_CommentBody__c</fullName>
        <label>CommentBody</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>pse_Commenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the person who did the post or the comment attached to a given idea.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IdeasComments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse_CreatorFullPhotoUrl__c</fullName>
        <label>CreatorFullPhotoUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pse_CreatorSmallPhotoUrl__c</fullName>
        <label>CreatorSmallPhotoUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pse_IdeaId__c</fullName>
        <label>Idea</label>
        <referenceTo>pse_Idea__c</referenceTo>
        <relationshipLabel>IdeasComments</relationshipLabel>
        <relationshipName>IdeasComments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse_Number_of_Comments__c</fullName>
        <description>Number of comments attached to an idea.</description>
        <label>Number of Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse_Number_of_Posts__c</fullName>
        <description>Number of posts attached to an idea.</description>
        <label>Number of Posts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IdeasComments</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>IdeasComments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdeasComments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>